@@ -25,6 +25,7 @@ import org.opentripplanner.model.plan.StreetLeg;
 import org.opentripplanner.model.plan.WalkStep;
 import org.opentripplanner.routing.core.State;
 import org.opentripplanner.routing.core.TraverseMode;
+import org.opentripplanner.routing.edgetype.BoardingLocationToStopLink;
 import org.opentripplanner.routing.edgetype.PathwayEdge;
 import org.opentripplanner.routing.edgetype.StreetEdge;
 import org.opentripplanner.routing.edgetype.VehicleParkingEdge;
@@ -40,8 +41,6 @@ import org.opentripplanner.routing.vertextype.VehicleParkingEntranceVertex;
 import org.opentripplanner.routing.vertextype.VehicleRentalStationVertex;
 import org.opentripplanner.util.I18NString;
 import org.opentripplanner.util.OTPFeature;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 /**
  * A mapper class used in converting internal GraphPaths to Itineraries, which are returned by the
@@ -50,8 +49,6 @@ import org.slf4j.LoggerFactory;
  * RaptorPathToItineraryMapper}.
  */
 public class GraphPathToItineraryMapper {
-
-  private static final Logger LOG = LoggerFactory.getLogger(GraphPathToItineraryMapper.class);
 
   private final ZoneId timeZone;
   private final AlertToLegMapper alertToLegMapper;
@@ -379,8 +376,12 @@ public class GraphPathToItineraryMapper {
       .stream()
       // The first back edge is part of the previous leg, skip it
       .skip(1)
+      // when linking an OSM boarding location, like a platform centroid, we create a link edge
+      // so we can see it in the debug UI's traversal permission layer but we don't want to show the
+      // link to the user so we remove it here
+      .filter(e -> !(e.backEdge instanceof BoardingLocationToStopLink))
       .map(State::getBackEdge)
-      .collect(Collectors.toList());
+      .toList();
 
     State firstState = states.get(0);
     State lastState = states.get(states.size() - 1);
